@@ -8,7 +8,7 @@ import javax.annotation.Nullable;
 /**
  * Main interface for this mod. Use this to get city information
  * Get a reference to an implementation of this interface by calling:
- *         FMLInterModComms.sendFunctionMessage("lostcities", "getLostCities", "<whatever>.YourClass$GetLostCities");
+ *         InterModComms.sendTo(ILostCities.LOSTCITIES, ILostCities.GET_LOST_CITIES, ModSetup.GetLostCities::new);
  */
 public interface ILostCities {
 
