@@ -85,40 +85,37 @@ public class ProfileSetup {
         profile.CITY_LEVEL3_HEIGHT = 68;
         STANDARD_PROFILES.put(profile.getName(), profile);
 
-//        profile = new LostCityProfile("space", true);
-//        profile.setDescription("Cities in floating glass bubbles");
-//        profile.setExtraDescription("Note! No villages or strongholds in this profile!");
-//        profile.setIconFile("textures/gui/icon_space.png");
-//        profile.LANDSCAPE_TYPE = LandscapeType.SPACE;
-//        profile.HORIZON = 0;
-////        profile.WATERLEVEL_OFFSET = 70;
-//        profile.RAILWAYS_CAN_END = true;
-//        profile.RAILWAYS_ENABLED = false;
-//        profile.RAILWAY_STATIONS_ENABLED = false;
-//        profile.HIGHWAY_DISTANCE_MASK = 0;
-//        profile.BRIDGE_SUPPORTS = false;
-//        profile.HIGHWAY_SUPPORTS = false;
-//        profile.RUBBLELAYER = false;
-//        profile.GROUNDLEVEL = 60;
-//        profile.EXPLOSION_CHANCE = 0.0001f;
-//        profile.MINI_EXPLOSION_CHANCE = 0.001f;
-//        profile.CITY_CHANCE = 0.6f;
-//        profile.CITY_MAXRADIUS = 90;
-//        profile.CITY_THRESHOLD = .05f;
-//        profile.CITY_LEVEL0_HEIGHT = 60;
-//        profile.CITY_LEVEL1_HEIGHT = 66;
-//        profile.CITY_LEVEL2_HEIGHT = 72;
-//        profile.CITY_LEVEL3_HEIGHT = 78;
-//        profile.GENERATE_MANSIONS = false;
-//        profile.GENERATE_MINESHAFTS = false;
-//        profile.GENERATE_OCEANMONUMENTS = false;
-//        profile.GENERATE_SCATTERED = false;
-//        profile.GENERATE_VILLAGES = false;
-//        profile.GENERATE_STRONGHOLDS = false;
-//        profile.AVOID_GENERATED_FOSSILS = true;
-//        profile.BUILDING_CHANCE = .3f;
-//        profile.GENERATE_LIGHTING = true;
-//        standardProfiles.put(profile.getName(), profile);
+        profile = new LostCityProfile("space", true);
+        profile.setDescription("Cities in floating glass bubbles. Use this in combination with Lost Worlds void world type");
+        profile.setExtraDescription("Note! No villages, mineshafts or strongholds in this profile!");
+        profile.setIconFile("textures/gui/icon_space.png");
+        profile.LANDSCAPE_TYPE = LandscapeType.SPACE;
+        profile.CITYSPHERE_OUTSIDE_PROFILE = "void_outside";
+        profile.SPAWN_SPHERE = "<in>";
+        profile.HORIZON = 0;
+        profile.CITYSPHERE_CHANCE = 0.9f;
+        profile.CITYSPHERE_CLEARABOVE = 20;
+        profile.CITYSPHERE_CLEARBELOW = 20;
+        profile.RAILWAYS_CAN_END = true;
+        profile.RAILWAYS_ENABLED = false;
+        profile.RAILWAY_STATIONS_ENABLED = false;
+        profile.HIGHWAY_DISTANCE_MASK = 0;
+        profile.BRIDGE_SUPPORTS = false;
+        profile.HIGHWAY_SUPPORTS = false;
+        profile.RUBBLELAYER = false;
+        profile.GROUNDLEVEL = 71;
+        profile.EXPLOSION_CHANCE = 0.0001f;
+        profile.MINI_EXPLOSION_CHANCE = 0.001f;
+        profile.CITY_CHANCE = 0.7f;
+        profile.CITY_MAXRADIUS = 90;
+        profile.CITY_THRESHOLD = .05f;
+        profile.CITY_LEVEL0_HEIGHT = 60;
+        profile.CITY_LEVEL1_HEIGHT = 66;
+        profile.CITY_LEVEL2_HEIGHT = 72;
+        profile.CITY_LEVEL3_HEIGHT = 78;
+        profile.BUILDING_CHANCE = .3f;
+        profile.GENERATE_LIGHTING = true;
+        STANDARD_PROFILES.put(profile.getName(), profile);
 
 //        profile = new LostCityProfile("waterbubbles", true);
 //        profile.setDescription("Cities in drowned glass bubbles");
@@ -322,6 +319,31 @@ public class ProfileSetup {
         profile.CITY_MINRADIUS = 30;
         profile.CITY_MAXRADIUS = 80;
         profile.VINE_CHANCE = 0.0f;
+        profile.CHANCE_OF_RANDOM_LEAFBLOCKS = 0.0f;
+        profile.RUBBLELAYER = true;
+        profile.RUBBLE_DIRT_SCALE = 2.0f;
+        profile.RUBBLE_LEAVE_SCALE = 0.0f;
+        profile.BUILDING_MAXCELLARS = 1;
+        profile.RUIN_CHANCE = 1.0f;
+        profile.RUIN_MINLEVEL_PERCENT = 0.1f;
+        profile.RUIN_MAXLEVEL_PERCENT = 0.4f;
+        profile.AVOID_FOLIAGE = true;
+//        profile.ALLOWED_BIOME_FACTORS = new String[] { "stone_beach=1", "dead_forest=1", "outback=1", "volcanic_island=1", "wasteland=.3" };
+        STANDARD_PROFILES.put(profile.getName(), profile);
+
+        profile = new LostCityProfile("void_outside", false);
+        profile.setDescription("Private wasteland for space");
+        profile.GROUNDLEVEL = 71;
+        profile.AVOID_WATER = true;
+        profile.CITY_CHANCE = 0f;
+        profile.CITY_MINRADIUS = 30;
+        profile.CITY_MAXRADIUS = 80;
+        profile.VINE_CHANCE = 0.0f;
+        profile.RAILWAY_STATIONS_ENABLED = false;
+        profile.RAILWAYS_ENABLED = false;
+        profile.HIGHWAY_DISTANCE_MASK = 0;
+        profile.BRIDGE_SUPPORTS = false;
+        profile.HIGHWAY_SUPPORTS = false;
         profile.CHANCE_OF_RANDOM_LEAFBLOCKS = 0.0f;
         profile.RUBBLELAYER = true;
         profile.RUBBLE_DIRT_SCALE = 2.0f;
