@@ -8,6 +8,7 @@ public net.minecraft.client.gui.screens.worldselection.CreateWorldScreen$MoreTab
 # For Lost Worlds
 public-f net.minecraft.client.multiplayer.ClientLevel$ClientLevelData f_104832_ # isFlat
 public net.minecraft.world.level.levelgen.NoiseBasedChunkGenerator m_224284_(Lnet/minecraft/world/level/levelgen/blending/Blender;Lnet/minecraft/world/level/StructureManager;Lnet/minecraft/world/level/levelgen/RandomState;Lnet/minecraft/world/level/chunk/ChunkAccess;II)Lnet/minecraft/world/level/chunk/ChunkAccess; # doFill
+public net.minecraft.world.level.StructureManager f_220460_ # level
 
 # # for NoiseChunkGenerator:
 # public net.minecraft.world.level.levelgen.NoiseBasedChunkGenerator f_64324_ # noiseSizeX
